# django-machina

./: .bowerrc  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  VERSION  bower.json  dev-requirements.txt  docker-compose.yml  gulpfile.babel.js  gulpfile.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-doc.freeze  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml
.tx/: config
docs/: Makefile  conf.py  contributing.rst  example_project.rst  example_projects.rst  forum_permissions.rst  getting_started.rst  glossary.rst  index.rst  make.bat  settings.rst
docs/_static/: custom_theme.css
docs/_templates/: indexcontent.html  layout.rst
docs/customization/: index.rst  overriding_applications.rst  underlying_mechanisms.rst
docs/machina_apps_reference/: forum.rst  forum_conversation.rst  forum_feeds.rst  forum_member.rst  forum_moderation.rst  forum_permission.rst  forum_search.rst  forum_tracking.rst  index.rst
docs/release_notes/: index.rst  v0.2.1.rst  v0.2.rst  v0.3.rst  v0.4.1.rst  v0.4.rst  v0.5.1.rst  v0.5.2.rst  v0.5.3.rst  v0.5.4.rst  v0.5.5.rst  v0.5.6.rst  v0.5.rst  v0.6.rst  v0.7.1.rst  v0.7.rst  v1.0.1.rst  v1.0.2.rst  v1.0.rst  v1.1.1.rst  v1.1.2.rst  v1.1.3.rst  v1.1.4.rst  v1.1.5.rst  v1.1.6.rst  v1.1.7.rst  v1.1.rst  v1.2.rst  v1.3.1.rst  v1.3.rst
example_project/: Makefile  manage.py  wsgi.py
example_project/example_project/: urls.py
example_project/project/: urls.py
example_project/vanilla_project/: urls.py
example_projects/demo/: gulpfile.babel.js  manage.py  package.json  requirements-dev.txt  requirements-main.txt  requirements.txt  uwsgi.ini  wsgi.py
example_projects/vanilla/: requirements-main.txt  requirements.txt  uwsgi.ini
machina/: __init__.py  app.py  urls.py
machina/conf/: settings.py  username.py
machina/core/: app.py  compat.py  context_processors.py  emails.py  loading.py  markdown.py  permission.py  shortcuts.py  urls.py  utils.py  validators.py
machina/forms/: widgets.py
machina/models/: __init__.py  abstract_models.py  fields.py
machina/templatetags/: attachments_tags.py  conversation_tags.py  forum_attachments_tags.py  (+11 more)
tests/: README.rst  conftest.py  models.py  settings.py
(+744 files in other folders)
