[flake8]
exclude = migrations,node_modules,example_projects,build,docs,.tox,.venv
ignore = E731, W504
max-line-length = 100

[isort]
default_section = THIRDPARTY
known_first_party = machina
line_length=100
lines_after_imports = 2
multi_line_output = 5
not_skip = __init__.py
skip=migrations,_testsite

[metadata]
license-file = LICENSE

[tool:pytest]
django_find_project = false
norecursedirs = build src .tox node_modules
addopts = --ds=tests.settings --reuse-db
confcutdir = ./tests/
python_paths = ./

[wheel]
universal = 1
